--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,6 +1,8 @@
 * {
   /* `otf-font-awesome` is required to be installed for icons */
-  font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+  /* font-family: FontAwesome, Roboto, Helvetica, Arial, monospace; */
+  font-family: sans-serif;
+  font-weight: 500;
   font-size: 13px;
 }
 
