--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
   /* `otf-font-awesome` is required to be installed for icons */
   /* font-family: FontAwesome, Roboto, Helvetica, Arial, monospace; */
-  font-family: sans-serif;
+  font-family: "MesloLGS Nerd Font";
   font-weight: 500;
   font-size: 13px;
 }
@@ -180,57 +180,12 @@ label:focus {
   color: #2a5c45;
 }
 
-#wireplumber {
-  background-color: #fff0f5;
-  color: #000000;
-}
-
-#wireplumber.muted {
-  background-color: #f53c3c;
-}
-
-#custom-media {
-  background-color: #66cc99;
-  color: #2a5c45;
-  min-width: 100px;
-}
-
-#custom-media.custom-spotify {
-  background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-  background-color: #ffa000;
-}
-
 #temperature {
   background-color: #f0932b;
 }
 
 #temperature.critical {
   background-color: #eb4d4b;
-}
-
-#tray {
-  background-color: #2980b9;
-}
-
-#tray > .passive {
-  -gtk-icon-effect: dim;
-}
-
-#tray > .needs-attention {
-  -gtk-icon-effect: highlight;
-  background-color: #eb4d4b;
-}
-
-#idle_inhibitor {
-  background-color: #2d3436;
-}
-
-#idle_inhibitor.activated {
-  background-color: #ecf0f1;
-  color: #2d3436;
 }
 
 #mpd {
@@ -250,19 +205,11 @@ label:focus {
   background-color: #51a37a;
 }
 
-#language {
-  background: #00b093;
-  color: #740864;
-  padding: 0 5px;
-  margin: 0 5px;
-  min-width: 16px;
-}
-
 #keyboard-state {
   background: #97e1ad;
   color: #000000;
   padding: 0 0px;
-  margin: 0 5px;
+  margin: 0 0px;
   min-width: 16px;
 }
 
@@ -271,13 +218,5 @@ label:focus {
 }
 
 #keyboard-state > label.locked {
-  background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad {
-  background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad.empty {
-  background-color: transparent;
+  background: rgb(220, 20, 60);
 }
