--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -12,11 +12,9 @@ window#waybar {
   transition-property: background-color;
   transition-duration: 0.5s;
 }
-
 window#waybar.hidden {
   opacity: 0.2;
 }
-
 /*
 window#waybar.empty {
     background-color: transparent;
@@ -25,11 +23,9 @@ window#waybar.solo {
     background-color: #FFFFFF;
 }
 */
-
 window#waybar.termite {
   background-color: #3f3f3f;
 }
-
 window#waybar.chromium {
   background-color: #000000;
   border: none;
@@ -42,30 +38,10 @@ button {
   border: none;
   border-radius: 0;
 }
-
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
   background: inherit;
   box-shadow: inset 0 -3px #ffffff;
-}
-
-#workspaces button {
-  padding: 0 5px;
-  background-color: transparent;
-  color: #ffffff;
-}
-
-#workspaces button:hover {
-  background: rgba(0, 0, 0, 0.2);
-}
-
-#workspaces button.active {
-  background-color: #64727d;
-  box-shadow: inset 0 -3px #ffffff;
-}
-
-#workspaces button.urgent {
-  background-color: #eb4d4b;
 }
 
 #mode {
@@ -74,7 +50,6 @@ button:hover {
 }
 
 #clock,
-#battery,
 #cpu,
 #memory,
 #disk,
@@ -88,23 +63,36 @@ button:hover {
 #mode,
 #idle_inhibitor,
 #scratchpad,
-#keyboard-state,
 #mpd {
   border-radius: 5px;
   padding: 0 10px;
   color: #ffffff;
 }
 
+#workspaces button {
+  padding: 0 5px;
+  background-color: transparent;
+  color: #ffffff;
+}
+#workspaces button:hover {
+  background: rgba(0, 0, 0, 0.2);
+}
+
+#workspaces button.active {
+  background-color: #64727d;
+  box-shadow: inset 0 -3px #ffffff;
+}
+#workspaces button.urgent {
+  background-color: #eb4d4b;
+}
 #window,
 #workspaces {
   margin: 0 4px;
 }
-
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
   margin-left: 0;
 }
-
 /* If workspaces is the rightmost module, omit right margin */
 .modules-right > widget:last-child > #workspaces {
   margin-right: 0;
@@ -115,23 +103,16 @@ button:hover {
 }
 
 #battery {
+  border-radius: 5px;
   background-color: #ffffff;
   color: #000000;
+  padding: 0 20px 0 10px;
 }
-
 #battery.charging,
 #battery.plugged {
   color: #ffffff;
   background-color: #26a65b;
 }
-
-@keyframes blink {
-  to {
-    background-color: #ffffff;
-    color: #000000;
-  }
-}
-
 #battery.critical:not(.charging) {
   background-color: #f53c3c;
   color: #ffffff;
@@ -140,6 +121,12 @@ button:hover {
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+}
+@keyframes blink {
+  to {
+    background-color: #ffffff;
+    color: #000000;
+  }
 }
 
 label:focus {
@@ -166,7 +153,6 @@ label:focus {
 #network {
   background-color: #2980b9;
 }
-
 #network.disconnected {
   background-color: #f53c3c;
 }
@@ -175,7 +161,6 @@ label:focus {
   background-color: #f1c40f;
   color: #000000;
 }
-
 #pulseaudio.muted {
   background-color: #90b1b1;
   color: #2a5c45;
@@ -184,7 +169,6 @@ label:focus {
 #temperature {
   background-color: #f0932b;
 }
-
 #temperature.critical {
   background-color: #eb4d4b;
 }
@@ -193,31 +177,25 @@ label:focus {
   background-color: #66cc99;
   color: #2a5c45;
 }
-
 #mpd.disconnected {
   background-color: #f53c3c;
 }
-
 #mpd.stopped {
   background-color: #90b1b1;
 }
-
 #mpd.paused {
   background-color: #51a37a;
 }
 
 #keyboard-state {
+  padding: 0 0px;
   background: #97e1ad;
   color: #000000;
-  padding: 0 0px;
-  margin: 0 0px;
-  min-width: 16px;
+  border-radius: 5px;
 }
-
 #keyboard-state > label {
-  padding: 0 5px;
+  padding: 0 10px;
 }
-
 #keyboard-state > label.locked {
   background: rgb(220, 20, 60);
 }
