--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,6 +1,7 @@
 * {
   /* `otf-font-awesome` is required to be installed for icons */
-  font-family: "MesloLGS Nerd Font Mono";
+  /* font-family: FontAwesome, Roboto, Helvetica, Arial, monospace; */
+  font-family: "MesloLGS Nerd Font";
   font-size: 13px;
 }
 
@@ -11,11 +12,9 @@ window#waybar {
   transition-property: background-color;
   transition-duration: 0.5s;
 }
-
 window#waybar.hidden {
   opacity: 0.2;
 }
-
 /*
 window#waybar.empty {
     background-color: transparent;
@@ -24,11 +23,9 @@ window#waybar.solo {
     background-color: #FFFFFF;
 }
 */
-
 window#waybar.termite {
   background-color: #3f3f3f;
 }
-
 window#waybar.chromium {
   background-color: #000000;
   border: none;
@@ -41,30 +38,10 @@ button {
   border: none;
   border-radius: 0;
 }
-
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
   background: inherit;
   box-shadow: inset 0 -3px #ffffff;
-}
-
-#workspaces button {
-  padding: 0 5px;
-  background-color: transparent;
-  color: #ffffff;
-}
-
-#workspaces button:hover {
-  background: rgba(0, 0, 0, 0.2);
-}
-
-#workspaces button.active {
-  background-color: #64727d;
-  box-shadow: inset 0 -3px #ffffff;
-}
-
-#workspaces button.urgent {
-  background-color: #eb4d4b;
 }
 
 #mode {
@@ -73,7 +50,6 @@ button:hover {
 }
 
 #clock,
-#battery,
 #cpu,
 #memory,
 #disk,
@@ -88,20 +64,35 @@ button:hover {
 #idle_inhibitor,
 #scratchpad,
 #mpd {
+  border-radius: 5px;
   padding: 0 10px;
   color: #ffffff;
 }
 
+#workspaces button {
+  padding: 0 5px;
+  background-color: transparent;
+  color: #ffffff;
+}
+#workspaces button:hover {
+  background: rgba(0, 0, 0, 0.2);
+}
+
+#workspaces button.active {
+  background-color: #64727d;
+  box-shadow: inset 0 -3px #ffffff;
+}
+#workspaces button.urgent {
+  background-color: #eb4d4b;
+}
 #window,
 #workspaces {
   margin: 0 4px;
 }
-
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
   margin-left: 0;
 }
-
 /* If workspaces is the rightmost module, omit right margin */
 .modules-right > widget:last-child > #workspaces {
   margin-right: 0;
@@ -109,34 +100,6 @@ button:hover {
 
 #clock {
   background-color: #64727d;
-}
-
-#battery {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-#battery.charging,
-#battery.plugged {
-  color: #ffffff;
-  background-color: #26a65b;
-}
-
-@keyframes blink {
-  to {
-    background-color: #ffffff;
-    color: #000000;
-  }
-}
-
-#battery.critical:not(.charging) {
-  background-color: #f53c3c;
-  color: #ffffff;
-  animation-name: blink;
-  animation-duration: 0.5s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
 }
 
 label:focus {
@@ -163,7 +126,6 @@ label:focus {
 #network {
   background-color: #2980b9;
 }
-
 #network.disconnected {
   background-color: #f53c3c;
 }
@@ -172,110 +134,42 @@ label:focus {
   background-color: #f1c40f;
   color: #000000;
 }
-
 #pulseaudio.muted {
   background-color: #90b1b1;
   color: #2a5c45;
 }
 
-#wireplumber {
-  background-color: #fff0f5;
-  color: #000000;
-}
-
-#wireplumber.muted {
-  background-color: #f53c3c;
-}
-
-#custom-media {
-  background-color: #66cc99;
-  color: #2a5c45;
-  min-width: 100px;
-}
-
-#custom-media.custom-spotify {
-  background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-  background-color: #ffa000;
-}
-
 #temperature {
   background-color: #f0932b;
 }
-
 #temperature.critical {
   background-color: #eb4d4b;
-}
-
-#tray {
-  background-color: #2980b9;
-}
-
-#tray > .passive {
-  -gtk-icon-effect: dim;
-}
-
-#tray > .needs-attention {
-  -gtk-icon-effect: highlight;
-  background-color: #eb4d4b;
-}
-
-#idle_inhibitor {
-  background-color: #2d3436;
-}
-
-#idle_inhibitor.activated {
-  background-color: #ecf0f1;
-  color: #2d3436;
 }
 
 #mpd {
   background-color: #66cc99;
   color: #2a5c45;
 }
-
 #mpd.disconnected {
   background-color: #f53c3c;
 }
-
 #mpd.stopped {
   background-color: #90b1b1;
 }
-
 #mpd.paused {
   background-color: #51a37a;
 }
 
-#language {
-  background: #00b093;
-  color: #740864;
-  padding: 0 5px;
-  margin: 0 5px;
-  min-width: 16px;
-}
-
 #keyboard-state {
+  padding: 0 0px;
   background: #97e1ad;
   color: #000000;
-  padding: 0 0px;
-  margin: 0 5px;
-  min-width: 16px;
+  border-radius: 5px;
 }
-
 #keyboard-state > label {
-  padding: 0 5px;
+  padding: 0 10px;
+  border-radius: 5px;
 }
-
 #keyboard-state > label.locked {
-  background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad {
-  background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad.empty {
-  background-color: transparent;
+  background: rgb(220, 20, 60);
 }
