--- a/main/eww/eww.scss
+++ b/main/eww/eww.scss
@@ -7,6 +7,7 @@
 .bar {
   background-color: #3a3a3a;
   border: 2px solid #000000;
+  border-radius: 10px;
 }
 
 // Styles on classes (see eww.yuck for more information)
