--- a/main/waybar/style.css
+++ b/main/waybar/style.css
@@ -1,138 +1,22 @@
 * {
-  /* `otf-font-awesome` is required to be installed for icons */
-  font-family: FontAwesome, sans-serif;
-  font-size: 15px;
+  font-size: 15;
 }
 
 window#waybar {
-  border-radius: 40px;
-  background-color: rgba(43, 48, 59, 0.5);
-  border-bottom: 0px solid rgba(100, 114, 125, 0.5);
-  color: #ffffff;
-  transition-property: background-color;
-  transition-duration: 0.5s;
-}
-window#waybar.hidden {
-  opacity: 0.2;
-}
-window#waybar.termite {
-  background-color: #3f3f3f;
-}
-window#waybar.chromium {
-  background-color: #000000;
-  border: none;
-}
-
-button {
-  /* Use box-shadow instead of border so the text isn't offset */
-  box-shadow: inset 0 -3px transparent;
-  /* Avoid rounded borders under each button name */
-  border: none;
-  border-radius: 0;
-}
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-button:hover {
-  background: inherit;
-  box-shadow: inset 0 -3px #ffffff;
-}
-
-#mode {
-  background-color: #64727d;
-  border-bottom: 3px solid #ffffff;
-}
-
-#clock,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
-#pulseaudio,
-#wireplumber,
-#custom-media,
-#tray,
-#mode,
-#idle_inhibitor,
-#scratchpad,
-#keyboard-state,
-#mpd {
-  background-color: #90b1b1;
   border-radius: 5px;
-  padding: 0 10px;
-  margin: 0 20px;
-  color: #000000;
+  border: 2px solid #000000;
 }
 
 #workspaces button {
-  padding: 0 5px;
-  background-color: transparent;
-  color: #ffffff;
-}
-#workspaces button:hover {
-  background: rgba(0, 0, 0, 0.2);
+  min-height: 0px;
+  min-width: 0px;
+  margin: 5px 0px 5px 0px;
 }
 
 #workspaces button.active {
-  background-color: #64727d;
-  box-shadow: inset 0 -3px #ffffff;
-}
-#workspaces button.urgent {
-  background-color: #eb4d4b;
-}
-#window,
-#workspaces {
-  margin: 0 4px;
-}
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-  margin-left: 20px;
-}
-/* If keyboard-state is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #keyboard-state {
-  margin-right: 20px;
+  color: red;
 }
 
-label:focus {
-  background-color: #000000;
-}
-
-#cpu {
-  color: #000000;
-}
-
-#network.disconnected {
-  background-color: #f53c3c;
-}
-
-#pulseaudio.muted {
-  color: #2a5c45;
-}
-
-#temperature.critical {
-  background-color: #eb4d4b;
-}
-
-#mpd {
-  color: #2a5c45;
-}
-#mpd.disconnected {
-  background-color: #f53c3c;
-}
-#mpd.stopped {
-  background-color: #90b1b1;
-}
-#mpd.paused {
-  background-color: #51a37a;
-}
-
-#keyboard-state {
-  padding: 0;
-}
-#keyboard-state > label {
-  padding: 0 10px;
-  border-radius: 5px;
-}
-#keyboard-state > label.locked {
-  background: rgb(220, 20, 60);
+#clock {
+  margin: 0px 10px 0px 10px;
 }
