--- a/main/waybar/style.css
+++ b/main/waybar/style.css
@@ -11,7 +11,7 @@
 /* left modules */
 /***************************/
 #custom-logo {
-  font-size: 20;
+  font-size: 20px;
   color: #24283b;
   margin: 0px 1px 0px 1px;
   padding: 0px 12px 0px 5px;
