--- a/main/waybar/style.css
+++ b/main/waybar/style.css
@@ -1,6 +1,12 @@
 /***************************/
 /* general properties */
 /***************************/
+@define-color background-color #24283b;
+@define-color accent-color #bb9af7;
+@define-color border-color #000000;
+@define-color font-color-dark #24283b;
+@define-color font-color-light #ffffff;
+
 * {
   all: unset;
   font-family: "JetBrainsMono Nerd Font", monospace;
@@ -11,29 +17,31 @@
 /* left modules */
 /***************************/
 #custom-logo {
+  color: @font-color-dark;
   font-size: 20px;
-  color: #24283b;
   margin: 0px 1px 0px 1px;
   padding: 0px 12px 0px 5px;
-  background-color: #bb9af7;
+  background-color: @accent-color;
   border-radius: 10px;
-  border: 2px solid #000000;
+  border: 2px solid @border-color;
 }
 
 #mpris {
+  color: @font-color-light;
   margin: 0px 1px 0px 1px;
   padding: 0px 10px 0px 5px;
-  background-color: #24283b;
+  background-color: @background-color;
   border-radius: 10px;
-  border: 2px solid #000000;
+  border: 2px solid @border-color;
 }
 
 #keyboard-state label {
+  color: @font-color-light;
   margin: 0px 1px 0px 1px;
   padding: 0px 15px 0px 10px;
-  background-color: #24283b;
+  background-color: @background-color;
   border-radius: 10px;
-  border: 2px solid #000000;
+  border: 2px solid @border-color;
 }
 #keyboard-state label.locked {
   padding: 0px 14px 0px 11px;
@@ -44,10 +52,11 @@
 /* center modules */
 /***************************/
 #workspaces {
+  color: @font-color-light;
   margin: 0px 1px 0px 1px;
-  background-color: #24283b;
+  background-color: @background-color;
   border-radius: 10px;
-  border: 2px solid #000000;
+  border: 2px solid @border-color;
 }
 #workspaces button {
   min-height: 0px;
@@ -55,9 +64,9 @@
   padding: 0px 10px 0px 10px;
 }
 #workspaces button.active {
-  color: #24283b;
+  color: @font-color-dark;
   font-weight: bold;
-  background-color: #bb9af7;
+  background-color: @accent-color;
   border-radius: 7px;
 }
 
@@ -65,67 +74,73 @@
 /* right modules */
 /***************************/
 #pulseaudio {
+  color: @font-color-light;
   margin: 0px 1px 0px 1px;
   padding: 0px 5px 0px 5px;
-  background-color: #24283b;
+  background-color: @background-color;
   border-radius: 10px;
-  border: 2px solid #000000;
+  border: 2px solid @border-color;
 }
 
 #backlight {
+  color: @font-color-light;
   margin: 0px 1px 0px 1px;
   padding: 0px 12px 0px 10px;
-  background-color: #24283b;
+  background-color: @background-color;
   border-radius: 10px;
-  border: 2px solid #000000;
+  border: 2px solid @border-color;
 }
 
 #cpu {
+  color: @font-color-light;
   margin: 0px 1px 0px 1px;
   padding: 0px 10px 0px 5px;
-  background-color: #24283b;
+  background-color: @background-color;
   border-radius: 10px;
-  border: 2px solid #000000;
+  border: 2px solid @border-color;
 }
 
 #memory {
+  color: @font-color-light;
   margin: 0px 1px 0px 1px;
   padding: 0px 10px 0px 5px;
-  background-color: #24283b;
+  background-color: @background-color;
   border-radius: 10px;
-  border: 2px solid #000000;
+  border: 2px solid @border-color;
 }
 
 #temperature {
+  color: @font-color-light;
   margin: 0px 1px 0px 1px;
   padding: 0px 5px 0px 5px;
-  background-color: #24283b;
+  background-color: @background-color;
   border-radius: 10px;
-  border: 2px solid #000000;
+  border: 2px solid @border-color;
 }
 
 #battery {
+  color: @font-color-light;
   margin: 0px 1px 0px 1px;
   padding: 0px 10px 0px 5px;
-  background-color: #24283b;
+  background-color: @background-color;
   border-radius: 10px;
-  border: 2px solid #000000;
+  border: 2px solid @border-color;
 }
 #battery.charging {
-  color: #000000;
+  color: @font-color-dark;
   background-color: lightgreen;
 }
 #battery.full {
-  color: #000000;
+  color: @font-color-dark;
   background-color: lightblue;
 }
 
 #clock {
-  color: #24283b;
+  color: @font-color-dark;
   font-weight: bold;
   margin: 0px 1px 0px 1px;
   padding: 0px 5px 0px 5px;
-  background-color: #bb9af7;
+  background-color: @accent-color;
   border-radius: 10px;
-  border: 2px solid #000000;
+  border: 2px solid @border-color;
 }
