--- a/main/waybar/style.css
+++ b/main/waybar/style.css
@@ -12,7 +12,7 @@
 }
 
 window#waybar {
-  background-color: @background-color;
+  background: @background-color;
 }
 /***************************/
 /* animations */
@@ -37,7 +37,7 @@ window#waybar {
   padding: 0px 12px 0px 5px;
   border-radius: 10000px;
   font-size: 20px;
-  background-color: @background-color;
+  background: @background-color;
   color: @accent-color;
 }
 
@@ -46,7 +46,7 @@ window#waybar {
   padding: 0px 20px 0px 15px;
   border-radius: 10000px;
   font-size: 14px;
-  background-color: #000000;
+  background: linear-gradient(to bottom, #000000, #111111);
   color: @font-color-light;
 }
 
@@ -55,15 +55,15 @@ window#waybar {
   padding: 0px 12px 0px 7px;
   border-radius: 10000px;
   font-size: 14px;
-  background-color: #7fffd4;
-  color: @font-color-dark;
+  background: transparent;
+  color: #028a0f;
 }
 #keyboard-state label.locked {
   margin: 7px 5px 7px 1px;
   padding: 0px 10px 0px 9px;
   border-radius: 10000px;
   font-size: 14px;
-  background-color: #ff0000;
+  background: #ff0000;
   color: @font-color-dark;
 }
 
@@ -72,7 +72,7 @@ window#waybar {
   padding: 0px 8px 0px 8px;
   border-radius: 10000px;
   font-size: 19px;
-  background-color: @background-color;
+  background: @background-color;
   color: #ff0000;
 }
 #custom-recording {
@@ -82,10 +82,96 @@ window#waybar {
   animation-timing-function: linear;
 }
 
-
 /***************************/
 /* center modules */
 /***************************/
+#workspaces {
+  margin: 7px 0px 7px 0px;
+  padding: 0px 8px 0px 6px;
+  border-radius: 10000px;
+  font-size: 14px;
+  background: linear-gradient(to bottom, #555555, #999999);
+  color: @font-color-light;
+}
+#workspaces button {
+  margin: 0px 5px 0px 5px;
+  padding: 1px 0px 0px 0px;
+  border-radius: 10000px;
+  font-size: 10px;
+  background: transparent;
+  color: #222222;
+}
+#workspaces button.active {
+  margin: 0px 5px 0px 5px;
+  padding: 1px 0px 0px 0px;
+  border-radius: 10000px;
+  font-size: 15px;
+  background: transparent;
+  color: @accent-color;
+}
+
 /***************************/
 /* right modules */
 /***************************/
+#pulseaudio {
+  margin: 7px 5px 7px 5px;
+  padding: 0px 10px 0px 8px;
+  border-radius: 10000px;
+  font-size: 14px;
+  background: linear-gradient(to bottom, #ff5c5c, #ff8f8f);
+  color: @font-color-dark;
+}
+
+#backlight {
+  margin: 7px 5px 7px 5px;
+  padding: 0px 10px 0px 10px;
+  border-radius: 10000px;
+  font-size: 14px;
+  background: linear-gradient(to bottom, #ff853c, #ffb48f);
+  color: @font-color-dark;
+}
+
+#cpu {
+  margin: 7px 5px 7px 5px;
+  padding: 0px 10px 0px 10px;
+  border-radius: 10000px;
+  font-size: 14px;
+  background: linear-gradient(to bottom, #ffff66, #ffff9e);
+  color: @font-color-dark;
+}
+
+#memory {
+  margin: 7px 5px 7px 5px;
+  padding: 0px 10px 0px 10px;
+  border-radius: 10000px;
+  font-size: 14px;
+  background: linear-gradient(to bottom, #5cff5c, #8fff8f);
+  color: @font-color-dark;
+}
+
+#temperature {
+  margin: 7px 5px 7px 5px;
+  padding: 0px 10px 0px 10px;
+  border-radius: 10000px;
+  font-size: 14px;
+  background: linear-gradient(to bottom, #5c5cff, #8f8fff);
+  color: @font-color-dark;
+}
+
+#battery {
+  margin: 7px 5px 7px 5px;
+  padding: 0px 10px 0px 10px;
+  border-radius: 10000px;
+  font-size: 14px;
+  background: linear-gradient(to bottom, #853cff, #b48fff);
+  color: @font-color-dark;
+}
+
+#clock {
+  margin: 7px 5px 7px 5px;
+  padding: 0px 10px 0px 10px;
+  border-radius: 10000px;
+  font-size: 14px;
+  background: linear-gradient(to bottom, #ff5cff, #ff8fff);
+  color: @font-color-dark;
+}
